@@ -255,6 +255,41 @@
         </user_parameters>
     </ip>
   </ip_preset>
+
+  <!-- qsfp0_lowspeed_preset  -->
+  
+	<ip_preset preset_proc_name="qsfp0_lowspeed_preset">
+		<ip vendor="xilinx.com" library="ip" name="axi_gpio" ip_interface="GPIO">
+		  <user_parameters>
+			<user_parameter name="CONFIG.C_DOUT_DEFAULT" value="0x00000002"/> 
+			<user_parameter name="CONFIG.C_TRI_DEFAULT" value="0xFFFFFFF8"/> 
+		  </user_parameters>
+		</ip>
+		<ip vendor="xilinx.com" library="ip" name="axi_gpio" ip_interface="GPIO2">
+		  <user_parameters>
+			<user_parameter name="CONFIG.C_DOUT_DEFAULT_2" value="0x00000002"/> 
+			<user_parameter name="CONFIG.C_TRI_DEFAULT_2" value="0xFFFFFFF8"/> 
+		  </user_parameters>
+		</ip>
+   </ip_preset>
+
+  <!-- qsfp1_lowspeed_preset  -->   
+   
+	<ip_preset preset_proc_name="qsfp1_lowspeed_preset">
+		<ip vendor="xilinx.com" library="ip" name="axi_gpio" ip_interface="GPIO">
+		  <user_parameters>
+			<user_parameter name="CONFIG.C_DOUT_DEFAULT" value="0x00000002"/> 
+			<user_parameter name="CONFIG.C_TRI_DEFAULT" value="0xFFFFFFF8"/> 
+		  </user_parameters>
+		</ip>
+		<ip vendor="xilinx.com" library="ip" name="axi_gpio" ip_interface="GPIO2">
+		  <user_parameters>
+			<user_parameter name="CONFIG.C_DOUT_DEFAULT_2" value="0x00000002"/> 
+			<user_parameter name="CONFIG.C_TRI_DEFAULT_2" value="0xFFFFFFF8"/> 
+		  </user_parameters>
+		</ip>
+   </ip_preset>  
+
   
    <ip_preset preset_proc_name="led_8bits_preset">
     <ip vendor="xilinx.com" library="ip" name="axi_gpio" ip_interface="GPIO">
@@ -480,6 +515,7 @@
 				<user_parameter name="CONFIG.NUM_OF_CORES" value="1" />
 				<user_parameter name="CONFIG.GT_TYPE" value="GTY" />
 				<user_parameter name="CONFIG.GT_GROUP_SELECT" value="Quad_X1Y10" />
+				<user_parameter name="CONFIG.BASE_R_KR" value="BASE-R" />
 			  </user_parameters>
 			</ip>
 		</ip_preset>
@@ -492,6 +528,7 @@
 				<user_parameter name="CONFIG.NUM_OF_CORES" value="2" />
 				<user_parameter name="CONFIG.GT_TYPE" value="GTY" />
 				<user_parameter name="CONFIG.GT_GROUP_SELECT" value="Quad_X1Y10" />
+				<user_parameter name="CONFIG.BASE_R_KR" value="BASE-R" />
 			  </user_parameters>
 			</ip>
 			
@@ -501,6 +538,7 @@
 				<user_parameter name="CONFIG.LINE_RATE" value="50" />
 				<user_parameter name="CONFIG.GT_TYPE" value="GTY" />
 				<user_parameter name="CONFIG.GT_GROUP_SELECT" value="Quad_X1Y10" />
+				<user_parameter name="CONFIG.BASE_R_KR" value="BASE-R" />
 			  </user_parameters>
 			</ip>
 		
@@ -514,6 +552,7 @@
 			<user_parameter name="CONFIG.NUM_OF_CORES" value="3" />
 			<user_parameter name="CONFIG.GT_TYPE" value="GTY" />
 			<user_parameter name="CONFIG.GT_GROUP_SELECT" value="Quad_X1Y10" />
+			<user_parameter name="CONFIG.BASE_R_KR" value="BASE-R" />
 		  </user_parameters>
 		</ip>
 	  </ip_preset>
@@ -527,6 +566,7 @@
 				<user_parameter name="CONFIG.NUM_OF_CORES" value="4" />
 				<user_parameter name="CONFIG.GT_TYPE" value="GTY" />
 				<user_parameter name="CONFIG.GT_GROUP_SELECT" value="Quad_X1Y10" />
+				<user_parameter name="CONFIG.BASE_R_KR" value="BASE-R" />
 			  </user_parameters>
 			</ip>
 			
@@ -537,6 +577,7 @@
 				<user_parameter name="CONFIG.LINE_RATE" value="40" />
 				<user_parameter name="CONFIG.GT_TYPE" value="GTY" />
 				<user_parameter name="CONFIG.GT_GROUP_SELECT" value="Quad_X1Y10" />
+				<user_parameter name="CONFIG.BASE_R_KR" value="BASE-R" />
 			  </user_parameters>
 			</ip>
 			
